<resources>
    <string name="app_name">小众</string>
    <string name="txt_skip">跳过</string>
    <string name="firstpage">首页</string>
    <string name="mepage">我</string>
    <string name="grouppage">小众</string>
    <string name="confirm">确定</string>
    <string name="title_activity_login">注册</string>
    <!-- url -->
    <string name="url_get_regist_code">http://120.25.97.250:8008/user/info/sendVerificationCode</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮件</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">注册</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fanhui">返回</string>
    <string name="queding">确定</string>
    <string name="prompt_password_again">再次输入密码</string>
    <string name="prompt_nick_name">昵称</string>
    <string name="prompt_register_code">注册码</string>
    <string name="action_regist_in">注册</string>
    <string name="hint_mine_titles">我的新闻</string>
    <string name="hint_total_titles">可选</string>
    <string name="prompt_request_code">邀请码(可选)</string>
    <string name="get_register_code">获取注册码</string>
    <string name="prompt_history_record">历史记录</string>


    <string name="url_post_regist">http://120.25.97.250:8008/user/info/regiser</string>
    <string name="url_get_base_news_type">http://120.25.97.250:8008/new/info/getTouristsNewType?rows=5</string>
    <string name="url_post_login">http://120.25.97.250:8008/user/info/login</string>
    <string name="url_post_auto_login">http://120.25.97.250:8008/user/info/autoLogin</string>
    <string name="url_get_type_news">http://120.25.97.250:8008/new/info/list?type=</string>
    <string name="url_get_logout">http://120.25.97.250:8008/user/info/logout?accessToken=</string>
    <string name="url_post_change_news_tab">http://120.25.97.250:8008/user/info/userNewTypeConfig?accessToken=</string>
    <string name="url_post_change_pass">http://120.25.97.250:8008/user/info/updatePassword?accessToken=</string>
    <string name="url_post_forget_pass">http://120.25.97.250:8008/user/info/forgetPassword</string>
    <string name="url_post_upload_img">http://120.25.97.250:8008/user/info/uploadAvatar?accessToken=</string>
    <string name="url_download_img">http://120.25.97.250:8008/user/info/down/</string>
    <string name="url_download_small_img">http://120.25.97.250:8008/user/info/down/small_</string>
    <string name="url_get_points_rules">http://120.25.97.250:8008/other/info/getIntegralDescription</string>
    <string name="url_get_custom_service">http://120.25.97.250:8008/other/info/getCustomerServiceInformation</string>
    <string name="url_post_news_Details">http://120.25.97.250:8008/new/info/getDetails</string>
    <string name="url_post_a_comment">http://120.25.97.250:8008/new/info/submitComments?accessToken=</string>
    <string name="url_get_comments">http://120.25.97.250:8008/new/info/getComments</string>
    <string name="url_post_daily_check_in">http://120.25.97.250:8008/user/info/dailyCheckIn?accessToken=</string>
    <string name="url_get_user_integral">http://120.25.97.250:8008/user/info/getUserIntegral?accessToken=</string>
    <string name="url_get_user_integral_list">http://120.25.97.250:8008/user/info/getIntegralDetailsList</string>
    <string name="url_post_delete_comments">http://120.25.97.250:8008/new/info/deleteComments?accessToken=</string>
    <string name="url_post_stick_top">http://120.25.97.250:8008/new/info/stickTop?accessToken=</string>
    <string name="url_post_collect_news">http://120.25.97.250:8008/new/info/newCollection?accessToken=</string>
    <string name="url_get_hot_week_news">http://120.25.97.250:8008/new/info/topNewsOnWeek?rows=10</string>
    <string name="url_get_hot_history_news">http://120.25.97.250:8008/new/info/topNewsOnHistory?rows=10</string>
    <string name="url_post_artical">http://120.25.97.250:8008/xiaozhong/info/publishNews?accessToken=</string>
    <string name="url_get_my_list">http://120.25.97.250:8008/xiaozhong/info/myXiaozhongNews</string>
    <string name="url_get_my_collect">http://120.25.97.250:8008/new/info/collectionList</string>
    <string name="url_post_cancel_collect">http://120.25.97.250:8008/new/info/cancelCollection?accessToken=</string>
    <string name="url_get_shequ_list">http://120.25.97.250:8008/xiaozhong/info/xiaozhongNewsList</string>
    <string name="url_get_my_news_details">http://120.25.97.250:8008/xiaozhong/info/getDetails</string>
    <string name="url_post_my_news_comments">http://120.25.97.250:8008/xiaozhong/info/submitComments?accessToken=</string>
    <string name="url_get_get_my_news_comments">http://120.25.97.250:8008/xiaozhong/info/getComments</string>
    <string name="url_post_my_news_sticktop">http://120.25.97.250:8008/xiaozhong/info/stickTop?accessToken=</string>
    <string name="url_post_my_news_delete_comments">http://120.25.97.250:8008/xiaozhong/info/deleteComments?accessToken=</string>
    <string name="url_post_delete_my_news">http://120.25.97.250:8008/xiaozhong/info/deleteXiaozhongNews?accessToken=</string>
    <string name="url_post_change_name">http://120.25.97.250:8008/user/info/updateUserInfo?accessToken=</string>
    <string name="url_get_post_quality">http://120.25.97.250:8008/xiaozhong/info/publishQualification?accessToken=</string>

    <string name="url_get_check_version">http://120.25.97.250:8008/other/info/getVersion</string>

    <string name="change_new_password">new password</string>
    <string name="change_old_password">old password</string>
    <string name="change_old_password_again">old password again</string>
    <string name="change_new_password_again">new password again</string>
    <string name="prompt_send">编辑评论</string>
    <string name="prompt_title">标题</string>
    <string name="prompt_content">编辑内容</string>
</resources>
